--- a/crypto_dash/src/components/Coins/coins.scss
+++ b/crypto_dash/src/components/Coins/coins.scss
@@ -1,6 +1,10 @@
 .coins-container {
     width: 100%;
     margin-top: 25px;
+
+    @media screen and (min-width: 1400px) {
+           
+    }
 }
 
 .coins-table {
