thermometer added and chart tweaks

--- a/crypto_dash/src/components/CoinSummary/coinSummary.scss
+++ b/crypto_dash/src/components/CoinSummary/coinSummary.scss
@@ -1,5 +1,17 @@
 .coin-summary-header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    width: 60%
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5px;
+
+    .chart-buttons {
+        justify-content: flex-end;
+    }
 }
