--- a/crypto_dash/src/components/common/TextButton/textButton.scss
+++ b/crypto_dash/src/components/common/TextButton/textButton.scss
@@ -2,11 +2,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid #ccc;
+    // border: 1px solid #ccc;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
     border-radius: 5px;
     padding: 5px;
-    width: 100px;
+    // width: 100%;
 
     &:hover {
         cursor: pointer;
