--- a/crypto_dash/src/components/common/TextButton/textButton.scss
+++ b/crypto_dash/src/components/common/TextButton/textButton.scss
@@ -3,13 +3,18 @@
     align-items: center;
     justify-content: center;
     // border: 1px solid #ccc;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-    border-radius: 5px;
+    // box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+    border-radius: 30%;
     padding: 5px;
+    border-left: none;
     // width: 100%;
 
     &:hover {
         cursor: pointer;
+    }
+
+    &:click {
+        box-shadow: rgba(67, 71, 85, 0.2) 0px 0px 5.6px 0px, rgba(90, 125, 188, 0.05) 0px 5.6px 8px 0px;
     }
 
     &:active {
