--- a/crypto_dash/src/index.css
+++ b/crypto_dash/src/index.css
@@ -1,4 +1,5 @@
 body {
-    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
-    color: #116897;
+    color: rgb(93, 88, 88);
+    background-color: rgb(0, 0, 0);
+	font-family: 'Roboto Mono', monospace;
 }
