--- a/crypto_dash/src/App.scss
+++ b/crypto_dash/src/App.scss
@@ -57,3 +57,9 @@ table {
 		justify-content: space-between;
 	}
 }
+
+.card {
+	box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+	padding: 15px;
+	border-radius: 15px;;
+}
