--- a/crypto_dash/src/components/CoinSummary/coinstats.scss
+++ b/crypto_dash/src/components/CoinSummary/coinstats.scss
@@ -2,8 +2,14 @@
     text-align: center;
     font-size: 1.3rem;
     margin-bottom: 15px;
+    padding: 15px;
 }
 
 hr {
-    background-color: rgb(38, 42, 42);
+    background-color: rgb(219, 228, 228);
+    margin: 15px 0;
+}
+
+.coin-stats {
+    padding: 45px;
 }
